# PyIKG2p

./: .gitmodules  CMakeLists.txt  README.md  setup.py
PyIKG2p/: __init__.py
src/: wrapper.cpp
tests/: test_basic.py
